--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "frontend": "http-server",
-    "backend": "json-server -w db.json"
+    "f": "http-server",
+    "b": "json-server -w db.json"
   },
   "dependencies": {
     "http-server": "^0.12.3"
